--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
 ---
 tags: ['main']
+layout: default
 ---
-Welcome to my new personal website. Work in progress.
+
+<section class="main-content">
+  {% for post in paginator.posts %}
+      <article class="module color-3">
+              <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
+              <span class="category">{{ post.categories }}</span>
+              <p>{{ post.content }}</p>
+      </article>
+  {% endfor %}
+
+  <div class="module pagination color-3">
+      {% if paginator.previous_page %}
+          <a href="{{ site.url }}{{ paginator.previous_page_path }}" class="previous">Previous</a>
+      {% endif %}
+
+      <span class="page_number">&mdash; {{ paginator.page }} of {{ paginator.total_pages }} &mdash;</span>
+
+      {% if paginator.next_page %}
+          <a href="{{ site.url }}{{ paginator.next_page_path }}" class="next">Next</a>
+      {% endif %}
+  </div>
+
+</section>
